--- a/assets/i18n/fr.json
+++ b/assets/i18n/fr.json
@@ -751,7 +751,7 @@
 	"I18N_FOOTER_NEWSLETTER_TEXT": "Faites partie de la communauté Oppia ! Notre lettre d'information bihebdomadaire vous tient informé des nouvelles fonctionnalités, des leçons et de la manière dont Oppia a un impact mondial.",
 	"I18N_FOOTER_OPPIA_FOUNDATION": "La Fondation Oppia",
 	"I18N_FOOTER_OPPIA_MISSION": "La mission d'Oppia est de fournir une plateforme d'apprentissage qui répond aux besoins uniques des communautés sous-financées.",
-	"I18N_FOOTER_OPPIA_MISSION_DONATE_VOLUNTEER": "<a href=\"/donate\">Faites un don</a> ou <a href=\"/volunteer\" (click)=\"navigateToVolunteerPage()\">devenez bénévole</a> aujourd'hui !",
+	"I18N_FOOTER_OPPIA_MISSION_DONATE_VOLUNTEER": "<a href=\"/donate\">Faites un don</a> ou <a href=\"/volunteer\">devenez bénévole</a> aujourd'hui !",
 	"I18N_FOOTER_PRIVACY_POLICY": "Politique de confidentialité",
 	"I18N_FOOTER_TEACH": "Enseigner avec Oppia",
 	"I18N_FOOTER_TEACH_LEARN_ALL_CAPS": "ENSEIGNER / APPRENDRE",
